data transform script

--- a/notebooks/04_transform_raw_data_into_features_and_targets.ipynb
+++ b/notebooks/04_transform_raw_data_into_features_and_targets.ipynb
@@ -55,17 +55,17 @@
      "output_type": "stream",
      "text": [
       "File 2022-01 was already in local storage\n",
-      "Downloading file 2022-02\n",
-      "Downloading file 2022-03\n",
-      "Downloading file 2022-04\n",
-      "Downloading file 2022-05\n",
-      "Downloading file 2022-06\n",
-      "Downloading file 2022-07\n",
-      "Downloading file 2022-08\n",
-      "Downloading file 2022-09\n",
-      "Downloading file 2022-10\n",
-      "Downloading file 2022-11\n",
-      "Downloading file 2022-12\n"
+      "File 2022-02 was already in local storage\n",
+      "File 2022-03 was already in local storage\n",
+      "File 2022-04 was already in local storage\n",
+      "File 2022-05 was already in local storage\n",
+      "File 2022-06 was already in local storage\n",
+      "File 2022-07 was already in local storage\n",
+      "File 2022-08 was already in local storage\n",
+      "File 2022-09 was already in local storage\n",
+      "File 2022-10 was already in local storage\n",
+      "File 2022-11 was already in local storage\n",
+      "File 2022-12 was already in local storage\n"
      ]
     },
     {
@@ -192,7 +192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 262/262 [00:03<00:00, 80.72it/s] \n"
+      "100%|██████████| 265/265 [00:03<00:00, 76.44it/s] \n"
      ]
     },
     {
@@ -225,32 +225,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2022-01-01 00:00:00</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2022-01-01 01:00:00</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2022-01-01 02:00:00</td>\n",
-       "      <td>26</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2022-01-01 03:00:00</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2022-01-01 04:00:00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -259,55 +259,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2295115</th>\n",
+       "      <th>2321395</th>\n",
        "      <td>2022-12-31 19:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>199</td>\n",
+       "      <td>2</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2295116</th>\n",
+       "      <th>2321396</th>\n",
        "      <td>2022-12-31 20:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>199</td>\n",
+       "      <td>2</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2295117</th>\n",
+       "      <th>2321397</th>\n",
        "      <td>2022-12-31 21:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>199</td>\n",
+       "      <td>7</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2295118</th>\n",
+       "      <th>2321398</th>\n",
        "      <td>2022-12-31 22:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>199</td>\n",
+       "      <td>3</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2295119</th>\n",
+       "      <th>2321399</th>\n",
        "      <td>2022-12-31 23:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>199</td>\n",
+       "      <td>2</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2295120 rows × 3 columns</p>\n",
+       "<p>2321400 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                pickup_hour  rides  pickup_location_id\n",
-       "0       2022-01-01 00:00:00     11                   4\n",
-       "1       2022-01-01 01:00:00     15                   4\n",
-       "2       2022-01-01 02:00:00     26                   4\n",
-       "3       2022-01-01 03:00:00      8                   4\n",
-       "4       2022-01-01 04:00:00      9                   4\n",
+       "0       2022-01-01 00:00:00      0                   1\n",
+       "1       2022-01-01 01:00:00      0                   1\n",
+       "2       2022-01-01 02:00:00      0                   1\n",
+       "3       2022-01-01 03:00:00      0                   1\n",
+       "4       2022-01-01 04:00:00      1                   1\n",
        "...                     ...    ...                 ...\n",
-       "2295115 2022-12-31 19:00:00      0                 199\n",
-       "2295116 2022-12-31 20:00:00      0                 199\n",
-       "2295117 2022-12-31 21:00:00      0                 199\n",
-       "2295118 2022-12-31 22:00:00      0                 199\n",
-       "2295119 2022-12-31 23:00:00      0                 199\n",
+       "2321395 2022-12-31 19:00:00      2                 265\n",
+       "2321396 2022-12-31 20:00:00      2                 265\n",
+       "2321397 2022-12-31 21:00:00      7                 265\n",
+       "2321398 2022-12-31 22:00:00      3                 265\n",
+       "2321399 2022-12-31 23:00:00      2                 265\n",
        "\n",
-       "[2295120 rows x 3 columns]"
+       "[2321400 rows x 3 columns]"
       ]
      },
      "execution_count": 5,
@@ -331,7 +331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 262/262 [00:17<00:00, 14.69it/s]\n"
+      "100%|██████████| 265/265 [00:18<00:00, 14.15it/s]\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "features.shape=(88294, 674)\n"
+      "features.shape=(89305, 674)\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "targets.shape=(88294,)\n"
+      "targets.shape=(89305,)\n"
      ]
     }
    ],
