Backfill data into hopsworks feature store

--- a/notebooks/11_backfill_feature_store.ipynb
+++ b/notebooks/11_backfill_feature_store.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading raw data from 2022 to 2024\n",
+      "Downloading raw data from 2022 to 2025\n",
       "File 2022-01 was already in local storage\n",
       "File 2022-02 was already in local storage\n",
       "File 2022-03 was already in local storage\n",
@@ -77,8 +77,30 @@
       "File 2024-09 was already in local storage\n",
       "File 2024-10 was already in local storage\n",
       "File 2024-11 was already in local storage\n",
-      "Downloading file 2024-12\n",
-      "2024-12 file is not available\n"
+      "File 2024-12 was already in local storage\n",
+      "File 2025-01 was already in local storage\n",
+      "Downloading file 2025-02\n",
+      "2025-02 file is not available\n",
+      "Downloading file 2025-03\n",
+      "2025-03 file is not available\n",
+      "Downloading file 2025-04\n",
+      "2025-04 file is not available\n",
+      "Downloading file 2025-05\n",
+      "2025-05 file is not available\n",
+      "Downloading file 2025-06\n",
+      "2025-06 file is not available\n",
+      "Downloading file 2025-07\n",
+      "2025-07 file is not available\n",
+      "Downloading file 2025-08\n",
+      "2025-08 file is not available\n",
+      "Downloading file 2025-09\n",
+      "2025-09 file is not available\n",
+      "Downloading file 2025-10\n",
+      "2025-10 file is not available\n",
+      "Downloading file 2025-11\n",
+      "2025-11 file is not available\n",
+      "Downloading file 2025-12\n",
+      "2025-12 file is not available\n"
      ]
     }
    ],
@@ -88,8 +110,8 @@
     "from src.data import load_raw_data\n",
     "\n",
     "from_year = 2022\n",
-    "# to_year = datetime.now().year\n",
-    "to_year = 2024\n",
+    "to_year = datetime.now().year\n",
+    "# to_year = 2025\n",
     "print(f\"Downloading raw data from {from_year} to {to_year}\")\n",
     "\n",
     "rides = pd.DataFrame()\n",
@@ -104,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(rides)=115465093\n"
+      "len(rides)=122608634\n"
      ]
     }
    ],
@@ -121,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,33 +203,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646364</th>\n",
-       "      <td>2024-11-30 23:11:15</td>\n",
-       "      <td>162</td>\n",
+       "      <th>3475221</th>\n",
+       "      <td>2025-01-31 23:01:48</td>\n",
+       "      <td>79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646365</th>\n",
-       "      <td>2024-11-30 23:49:30</td>\n",
-       "      <td>132</td>\n",
+       "      <th>3475222</th>\n",
+       "      <td>2025-01-31 23:50:29</td>\n",
+       "      <td>161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646366</th>\n",
-       "      <td>2024-11-30 23:31:46</td>\n",
-       "      <td>100</td>\n",
+       "      <th>3475223</th>\n",
+       "      <td>2025-01-31 23:26:59</td>\n",
+       "      <td>144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646367</th>\n",
-       "      <td>2024-11-30 23:41:21</td>\n",
-       "      <td>42</td>\n",
+       "      <th>3475224</th>\n",
+       "      <td>2025-01-31 23:14:34</td>\n",
+       "      <td>142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646368</th>\n",
-       "      <td>2024-11-30 23:21:52</td>\n",
-       "      <td>116</td>\n",
+       "      <th>3475225</th>\n",
+       "      <td>2025-01-31 23:56:42</td>\n",
+       "      <td>237</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>115465093 rows × 2 columns</p>\n",
+       "<p>122608634 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -218,16 +240,16 @@
        "3       2022-01-01 00:25:21                 114\n",
        "4       2022-01-01 00:36:48                  68\n",
        "...                     ...                 ...\n",
-       "3646364 2024-11-30 23:11:15                 162\n",
-       "3646365 2024-11-30 23:49:30                 132\n",
-       "3646366 2024-11-30 23:31:46                 100\n",
-       "3646367 2024-11-30 23:41:21                  42\n",
-       "3646368 2024-11-30 23:21:52                 116\n",
+       "3475221 2025-01-31 23:01:48                  79\n",
+       "3475222 2025-01-31 23:50:29                 161\n",
+       "3475223 2025-01-31 23:26:59                 144\n",
+       "3475224 2025-01-31 23:14:34                 142\n",
+       "3475225 2025-01-31 23:56:42                 237\n",
        "\n",
-       "[115465093 rows x 2 columns]"
+       "[122608634 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 263/263 [00:07<00:00, 37.50it/s]\n"
+      "100%|██████████| 265/265 [00:07<00:00, 33.42it/s]\n"
      ]
     }
    ],
@@ -257,7 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# string to datetime\n",
+    "ts_data['pickup_hour'] = pd.to_datetime(ts_data['pickup_hour'], utc=True)\n",
+    "\n",
+    "# add column with Unix epoch milliseconds\n",
+    "ts_data['pickup_ts'] = ts_data['pickup_hour'].astype(int) // 10**6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,104 +319,140 @@
        "      <th>pickup_hour</th>\n",
        "      <th>rides</th>\n",
        "      <th>pickup_location_id</th>\n",
+       "      <th>pickup_ts</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-01-01 00:00:00</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2022-01-01 00:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1640995200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-01-01 01:00:00</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2022-01-01 01:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1640998800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-01-01 02:00:00</td>\n",
-       "      <td>26</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2022-01-01 02:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1641002400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-01-01 03:00:00</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2022-01-01 03:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1641006000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-01-01 04:00:00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2022-01-01 04:00:00+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1641009600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6722275</th>\n",
-       "      <td>2024-11-30 19:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <th>7167715</th>\n",
+       "      <td>2025-01-31 19:00:00+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>265</td>\n",
+       "      <td>1738350000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6722276</th>\n",
-       "      <td>2024-11-30 20:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <th>7167716</th>\n",
+       "      <td>2025-01-31 20:00:00+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>265</td>\n",
+       "      <td>1738353600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6722277</th>\n",
-       "      <td>2024-11-30 21:00:00</td>\n",
+       "      <th>7167717</th>\n",
+       "      <td>2025-01-31 21:00:00+00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <td>265</td>\n",
+       "      <td>1738357200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6722278</th>\n",
-       "      <td>2024-11-30 22:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <th>7167718</th>\n",
+       "      <td>2025-01-31 22:00:00+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>265</td>\n",
+       "      <td>1738360800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6722279</th>\n",
-       "      <td>2024-11-30 23:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <th>7167719</th>\n",
+       "      <td>2025-01-31 23:00:00+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>265</td>\n",
+       "      <td>1738364400000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6722280 rows × 3 columns</p>\n",
+       "<p>7167720 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                pickup_hour  rides  pickup_location_id\n",
-       "0       2022-01-01 00:00:00     11                   4\n",
-       "1       2022-01-01 01:00:00     15                   4\n",
-       "2       2022-01-01 02:00:00     26                   4\n",
-       "3       2022-01-01 03:00:00      8                   4\n",
-       "4       2022-01-01 04:00:00      9                   4\n",
-       "...                     ...    ...                 ...\n",
-       "6722275 2024-11-30 19:00:00      0                 110\n",
-       "6722276 2024-11-30 20:00:00      0                 110\n",
-       "6722277 2024-11-30 21:00:00      0                 110\n",
-       "6722278 2024-11-30 22:00:00      0                 110\n",
-       "6722279 2024-11-30 23:00:00      0                 110\n",
+       "                      pickup_hour  rides  pickup_location_id      pickup_ts\n",
+       "0       2022-01-01 00:00:00+00:00      0                   1  1640995200000\n",
+       "1       2022-01-01 01:00:00+00:00      0                   1  1640998800000\n",
+       "2       2022-01-01 02:00:00+00:00      0                   1  1641002400000\n",
+       "3       2022-01-01 03:00:00+00:00      0                   1  1641006000000\n",
+       "4       2022-01-01 04:00:00+00:00      1                   1  1641009600000\n",
+       "...                           ...    ...                 ...            ...\n",
+       "7167715 2025-01-31 19:00:00+00:00      2                 265  1738350000000\n",
+       "7167716 2025-01-31 20:00:00+00:00      3                 265  1738353600000\n",
+       "7167717 2025-01-31 21:00:00+00:00      0                 265  1738357200000\n",
+       "7167718 2025-01-31 22:00:00+00:00      2                 265  1738360800000\n",
+       "7167719 2025-01-31 23:00:00+00:00      1                 265  1738364400000\n",
        "\n",
-       "[6722280 rows x 3 columns]"
+       "[7167720 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ts_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pickup_hour           datetime64[ns, UTC]\n",
+       "rides                               int64\n",
+       "pickup_location_id                  int64\n",
+       "pickup_ts                           int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts_data.dtypes"
    ]
   },
   {
@@ -393,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,16 +473,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-02-03 12:57:20,050 INFO: Initializing external client\n",
-      "2025-02-03 12:57:20,051 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-02-03 12:57:21,250 INFO: Python Engine initialized.\n",
+      "2025-03-27 19:59:13,114 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-03-27 19:59:13,120 INFO: Initializing external client\n",
+      "2025-03-27 19:59:13,120 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-27 19:59:13,651 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
      ]
@@ -426,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +508,7 @@
        "Project('nyc_taxi_demand_forecast', 'sushmithahs047@gmail.com', 'Default project')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,16 +519,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_store.FeatureStore at 0x110eeb9b0>"
+       "<hsfs.feature_store.FeatureStore at 0x316ca86b0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,14 +566,14 @@
     "    name=FEATURE_GROUP_NAME,\n",
     "    version=FEATURE_GROUP_VERSION,\n",
     "    description=\"Time-series data at hourly frequency\",\n",
-    "    primary_key = ['pickup_location_id', 'pickup_hour'],\n",
-    "    event_time=\"pickup_hour\",\n",
+    "    primary_key = ['pickup_location_id', 'pickup_ts'],\n",
+    "    event_time=\"pickup_ts\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +581,14 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1211558/fs/1200206/fg/1400282\n"
+      "https://c.app.hopsworks.ai:443/p/1211558/fs/1200206/fg/1422967\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 6722280/6722280 | Elapsed Time: 04:37 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 7167720/7167720 | Elapsed Time: 05:30 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -534,7 +607,7 @@
        " None)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
