Fix bug training pipeline script

--- a/notebooks/11_backfill_feature_store.ipynb
+++ b/notebooks/11_backfill_feature_store.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[122608634 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 265/265 [00:07<00:00, 33.42it/s]\n"
+      "100%|██████████| 265/265 [00:07<00:00, 34.97it/s]\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[7167720 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,18 +473,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-27 19:59:13,114 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-04-05 11:26:26,203 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-27 19:59:13,120 INFO: Initializing external client\n",
-      "2025-03-27 19:59:13,120 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-27 19:59:13,651 INFO: Python Engine initialized.\n",
+      "2025-04-05 11:26:26,208 INFO: Initializing external client\n",
+      "2025-04-05 11:26:26,208 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "UserWarning: The installed hopsworks client version 4.1.5 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
+      "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-05 11:26:26,771 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
      ]
@@ -499,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +524,7 @@
        "Project('nyc_taxi_demand_forecast', 'sushmithahs047@gmail.com', 'Default project')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,16 +535,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_store.FeatureStore at 0x316ca86b0>"
+       "<hsfs.feature_store.FeatureStore at 0x3272c1e50>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -581,14 +597,14 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1211558/fs/1200206/fg/1422967\n"
+      "https://c.app.hopsworks.ai:443/p/1211558/fs/1200206/fg/1434995\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 7167720/7167720 | Elapsed Time: 05:30 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 7167720/7167720 | Elapsed Time: 05:26 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -607,7 +623,7 @@
        " None)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
