--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2025-03-28 02:00:00')\n"
+      "current_date=Timestamp('2025-04-05 15:00:00')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ss/_2h_wp7x63jb4xcfzjnw1pym0000gn/T/ipykernel_6840/356251437.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "/var/folders/ss/_2h_wp7x63jb4xcfzjnw1pym0000gn/T/ipykernel_52363/356251437.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
       "  current_date = pd.to_datetime(datetime.utcnow()).floor('H')\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,15 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetch_data_to=Timestamp('2025-03-28 02:00:00')\n",
-      "fetch_data_from=Timestamp('2025-02-28 02:00:00')\n"
+      "fetch_data_to=Timestamp('2025-04-05 15:00:00')\n",
+      "fetch_data_from=Timestamp('2025-03-08 15:00:00')\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "File 2024-03 was already in local storage\n",
-      "File 2024-03 was already in local storage\n"
+      "File 2024-04 was already in local storage\n"
      ]
     }
    ],
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 265/265 [00:00<00:00, 805.96it/s]\n"
+      "100%|██████████| 265/265 [00:00<00:00, 829.40it/s]\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,18 +207,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-27 22:51:34,301 INFO: Closing external client and cleaning up certificates.\n",
-      "Connection closed.\n",
-      "2025-03-27 22:51:34,307 INFO: Initializing external client\n",
-      "2025-03-27 22:51:34,308 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-27 22:51:34,918 INFO: Python Engine initialized.\n",
+      "2025-04-05 11:54:07,630 INFO: Initializing external client\n",
+      "2025-04-05 11:54:07,630 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "UserWarning: The installed hopsworks client version 4.1.5 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
+      "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-05 11:54:08,434 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
      ]
@@ -237,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_store.FeatureStore at 0x333a606b0>"
+       "<hsfs.feature_store.FeatureStore at 0x119479b50>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x33a11d9a0>"
+       "<hsfs.feature_group.FeatureGroup at 0x317081a60>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +312,7 @@
        "'bigint'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 197160/197160 | Elapsed Time: 00:09 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 178080/178080 | Elapsed Time: 01:23 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -335,7 +349,7 @@
        " None)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,6 +357,20 @@
    "source": [
     "feature_group.insert(ts_data, write_options={\"wait_for_job\": False})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
